# ofgirlsscrappertool

./: .env.example  .gitignore  .replit  README.md  export_temp.json  extreme_debug.py  index.html  inspect_fitchr1s.py  instagram_leads.db  list_comments.py  live_chat_analysis.py  main.py  manual_import.py  migrate_sqlite_to_postgres.py  monitor_system.py  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  simulate_analysis.py  start.sh  tailwind.config.js  test_analyze_german.py  test_localhost_analysis.py  test_profile_exists.py  vite.config.js
backend/: instagram_leads.db  monitor_system.py  server.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/data/: users.json
src/: App.jsx  index.css
src/data/: users.json
